--- a/README.Rmd
+++ b/README.Rmd
@@ -31,8 +31,8 @@ Tufte's most famous slopegraph example is probably the ["cancer survival graph,"
 
 ```{r, results='hide', cache=TRUE}
 pdf('inst/examples/cancer-survival.pdf',height=16, width=12, family='Palatino')
-slopegraph(cancer, col.line='gray', xlim=c(-.5,5.5), binval=2.5, 
-           labels=c('5 Year','10 Year','15 Year','20 Year'))
+slopegraph(cancer, col.line = 'gray', xlim = c(-.5,5.5), binval = 2.5, 
+           labels = c('5 Year','10 Year','15 Year','20 Year'))
 dev.off()
 
 # convert to png for web display
@@ -46,8 +46,8 @@ The second example, also from Tufte, shows changes in gross domestic product for
 
 ```{r gdp, results='hide', cache=TRUE}
 pdf('inst/examples/gdp.pdf', height=12, width=8, family='Palatino')
-slopegraph(gdp, col.line='gray', labels=c('1970','1979'), binval=3.75, 
-           main='Current Receipts of Goverment as a Percentage of Gross Domestic Product')
+slopegraph(gdp, col.line = 'gray', labels = c('1970','1979'), binval = 3.75, 
+           main = 'Current Receipts of Goverment as a Percentage of Gross Domestic Product')
 dev.off()
 
 # convert to png for web display
@@ -60,8 +60,8 @@ This third example comes from an 1878 publication ([a copy of which is available
 
 ```{r states, results='hide', cache=TRUE}
 pdf('inst/examples/states.pdf', height=15, width=15, family='Palatino')
-slopegraph(states, col.line='black', ylim = c(38,0),
-           main='Relative Rank of U.S. State Populations, 1790-1870')
+slopegraph(states, ylim = c(37,0), offset.x = 0.06,
+           main = 'Relative Rank of U.S. State Populations, 1790-1870')
 dev.off()
 
 # convert to png for web display
