--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ The current output of the `slopegraph` function (for the examples included in do
 
 Tufte's most famous slopegraph example is probably the ["cancer survival graph,"](http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0003nk) depicting 5, 10, 15, and 20 year survival rates for various cancers. The first example mimics this result but draws it to the correct scale (unlike Tufte's original):
 
-```{r cancer-survival, results='hide', fig.path='inst/examples/', fig.height = 12, fig.width = 10, dev='svglite', cache=TRUE}
+```{r cancer-survival, fig.show='hide', fig.path='inst/examples/', fig.height = 12, fig.width = 10, dev='svglite', cache=TRUE}
 library("slopegraph")
 data(cancer)
 slopegraph(cancer, col.line = 'gray', xlim = c(-.5,5.5), binval = 2.5, 
@@ -26,7 +26,7 @@ slopegraph(cancer, col.line = 'gray', xlim = c(-.5,5.5), binval = 2.5,
 
 The second example, also from Tufte, shows changes in gross domestic product for a small set of countries over two points in time:
 
-```{r gdp, results='hide', fig.path='inst/examples/', fig.height = 12, fig.width = 10, dev='svglite', cache=TRUE}
+```{r gdp, fig.show='hide', fig.path='inst/examples/', fig.height = 12, fig.width = 10, dev='svglite', cache=TRUE}
 data(gdp)
 slopegraph(gdp, col.line = 'gray', labels = c('1970','1979'), binval = 3.75, 
            main = 'Current Receipts of Goverment as a Percentage of Gross Domestic Product')
@@ -36,7 +36,7 @@ slopegraph(gdp, col.line = 'gray', labels = c('1970','1979'), binval = 3.75,
 
 This third example comes from an 1878 publication ([a copy of which is available here](http://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~207741~3003452:Chart-Exhibiting-the-Relative-Rank-)), showing the relative ranking of the population of various U.S. states. This example features a reversed y-axis to better display the ranking:
 
-```{r states, results='hide', fig.path='inst/examples/', fig.height = 15, fig.width = 15, dev='svglite', cache=TRUE}
+```{r states, fig.show='hide', fig.path='inst/examples/', fig.height = 15, fig.width = 15, dev='svglite', cache=TRUE}
 data(states)
 slopegraph(states, ylim = c(37,0), offset.x = 0.06,
            main = 'Relative Rank of U.S. State Populations, 1790-1870')
