--- a/README.Rmd
+++ b/README.Rmd
@@ -34,11 +34,13 @@ slopegraph(gdp, col.line = 'gray', labels = c('1970','1979'), binval = 3.75,
 
 ![GDP](https://rawgithub.com/leeper/slopegraph/master/inst/examples/gdp-1.svg)
 
-This third example comes from an 1878 publication ([a copy of which is available here](http://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~207741~3003452:Chart-Exhibiting-the-Relative-Rank-)), showing the relative ranking of the population of various U.S. states. This example features a reversed y-axis to better display the ranking:
+This third example comes from an 1878 publication ([a copy of which is available here](http://www.davidrumsey.com/luna/servlet/detail/RUMSEY~8~1~207741~3003452:Chart-Exhibiting-the-Relative-Rank-)), showing the relative ranking of the population of various U.S. states. This example features a reversed y-axis to better display the ranking and I demonstrate the `col.lines` argument to highlight South Carolina:
 
 ```{r states, fig.show='hide', fig.path='inst/examples/', fig.height = 15, fig.width = 15, dev='svglite', cache=TRUE}
 data(states)
+cols <- `[<-`(rep("black", 37), 7, "red")
 slopegraph(states, ylim = c(37,0), offset.x = 0.06,
+           col.lines = cols, col.lab = cols, 
            main = 'Relative Rank of U.S. State Populations, 1790-1870')
 ```
 
