--- a/README.Rmd
+++ b/README.Rmd
@@ -1,24 +1,25 @@
 # Tufte-Inspired Slopegraphs in R
 
-This repository holds some working code for creating slopegraphs in R.
+This repository holds some working code for creating "slopegraphs" in R.
 
 *This is very much a work in progress. Once it's more stable, I will release the package to CRAN.*
 
 Pull requests welcome. Please report any issues on the [issues page](https://github.com/leeper/slopegraph/issues).
 
-The package currently includes only one function (`slopegraph`), which produces a slopegraph from an observation-by-period dataframe. Everything is more or less drawn automatically, but is highly customizable in terms of line and text colors, font sizes and styles, axes, titles, and plotting behind and in front of the slopegraph lines.
+The package currently includes one mainfunction, `slopegraph()`, which produces a slopegraph from an observation-by-period data frame. Everything is more or less drawn automatically, but is highly customizable in terms of line and text colors, font sizes and styles, axes, titles, and plotting behind and in front of the slopegraph lines. An underlying function, `segmentize()` produces the data structure used for the actual plotting. And a new function, `ggslopegraph()` does the same as `slopegraph()` but using ggplot2 graphics.
 
 ## Examples
 
-The current output of the `slopegraph` function (for the examples included in documentation) are shown below. 
+The current output of the `slopegraph()` function (for the examples included in documentation) are shown below. 
 
 Tufte's most famous slopegraph example is probably the ["cancer survival graph,"](http://www.edwardtufte.com/bboard/q-and-a-fetch-msg?msg_id=0003nk) depicting 5, 10, 15, and 20 year survival rates for various cancers. The first example mimics this result but draws it to the correct scale (unlike Tufte's original):
 
 ```{r cancer-survival, fig.show='hide', fig.path='inst/examples/', fig.height = 12, fig.width = 10, dev='svglite', cache=TRUE}
 library("slopegraph")
 data(cancer)
-slopegraph(cancer, col.lines = 'gray', xlim = c(-.5,5.5), 
-           labels = c('5 Year','10 Year','15 Year','20 Year'))
+slopegraph(cancer, col.lines = 'gray', col.lab = "black", 
+           xlim = c(-.5,5.5), 
+           xlabels = c('5 Year','10 Year','15 Year','20 Year'))
 ```
 
 ![Cancer Survival](https://rawgithub.com/leeper/slopegraph/master/inst/examples/cancer-survival-1.svg)
@@ -28,7 +29,7 @@ The second example, also from Tufte, shows changes in gross domestic product for
 
 ```{r gdp, fig.show='hide', fig.path='inst/examples/', fig.height = 12, fig.width = 10, dev='svglite', cache=TRUE}
 data(gdp)
-slopegraph(gdp, col.lines = 'gray', labels = c('1970','1979'),  
+slopegraph(gdp, col.lines = 'gray', col.lab = "black", xlabels = c('1970','1979'),  
            main = 'Current Receipts of Goverment as a Percentage of Gross Domestic Product')
 ```
 
@@ -39,7 +40,7 @@ This third example comes from an 1878 publication ([a copy of which is available
 ```{r states, fig.show='hide', fig.path='inst/examples/', fig.height = 15, fig.width = 15, dev='svglite', cache=TRUE}
 data(states)
 cols <- `[<-`(rep("black", 37), 7, "red")
-slopegraph(states, ylim = c(37,0), offset.x = 0.06,
+slopegraph(states, xlim = c(-1, 12), ylim = c(37,0), offset.x = 0.06,
            col.lines = cols, col.lab = cols, 
            main = 'Relative Rank of U.S. State Populations, 1790-1870')
 ```
@@ -48,7 +49,8 @@ slopegraph(states, ylim = c(37,0), offset.x = 0.06,
 
 As of v0.1.9, there is also a ggplot2-based function, `ggslopegraph()` that produces a similar representation but using ggplot2 graphics:
 
-```{r ggstates, fig.show='hide', fig.path='inst/examples/', fig.height = 15, fig.width = 15, dev='svglite', cache=TRUE}
+```{r ggstates, fig.show='hide', fig.path='inst/examples/', fig.height = 12, fig.width = 12, dev='svglite', cache=TRUE}
+require("ggplot2")
 data(states)
 cols <- `[<-`(rep("black", 37), 7, "red")
 ggslopegraph(states, offset.x = 0.06, yrev = TRUE,
